version/0.16/_sources/api/solver/_autosummary/settings/pressure_far_field.rst.txt
:orphan:

.. _pressure_far_field:

pressure_far_field
==================

.. autoclass:: ansys.fluent.core.solver.settings_232.pressure_far_field.pressure_far_field
    :show-inheritance:

.. rubric:: Methods

========================================   ==============================

Method                                                            Summary

========================================   ==============================
:ref:`list <list>`                                        'list' command.

:ref:`list_properties <list_properties>`       'list_properties' command.

:ref:`duplicate <duplicate>`                         'duplicate' command.

========================================   ==============================

.. rubric:: Named object type

:ref:`pressure_far_field_child <pressure_far_field_child>`


.. rubric:: Included in:

================================================   ================================

Parent                                                                      Summary

================================================   ================================
:ref:`boundary_conditions <boundary_conditions>`       'boundary_conditions' child.

================================================   ================================

